--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Um bot MUITO simples para servidores discord desenvolvido em Node",
   "main": "index.js",
   "scripts": {
-    "dev": "node .\index.js"
+    "dev": "node ."
   },
   "keywords": [],
   "author": "",
